Feather Runtime Second Update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,8 @@ keywords = ["http","web","framework","minimal","rust"]
 categories = ["web-programming","network-programming"]
 
 
-
 [dependencies]
 colored = "3.0.0"
-ctrlc = "3.4.5"
 dyn-clone = "1.0.19"
 serde = { version = "1.0.217", features = ["derive"] , optional = true}
 serde_json = {version = "1.0.135", optional = true}
@@ -22,6 +20,8 @@ thiserror = "2.0.12"
 rayon = "*"
 feather-runtime ={ path = "./feather-runtime" }
 parking_lot = "0.12.3"
+html-to-string-macro = "0.2.5"
+
 [dev-dependencies]
 reqwest = {version = "0.12.15", features = ["blocking"]}
 
@@ -32,8 +32,6 @@ path = "src/lib.rs"
 
 [features]
 default = ["json"]
-
-tera = []
 json = ["dep:serde","dep:serde_json"]
 
 [[example]]
