--- a/feather-runtime/Cargo.toml
+++ b/feather-runtime/Cargo.toml
@@ -7,14 +7,14 @@ description = "Web Server Runtime for Feather"
 license = "MIT"
 
 [dependencies]
-mio = {version = "1.0.2", features = ["net","os-poll"]}
 rusty_pool = {version = "0.7.0", default-features = false}
 httparse = "1.10.1"
 http = "1.3.1"
 crossbeam = "0.8.4"
 bytes ={ version = "*"}
-slab = "*"
-
+serde = { version = "1.0"}
+serde_json = { version = "1.0"}
+ctrlc = "*"
 [lib]
 crate-type = ["lib"]
 name = "feather_runtime"
