--- a/feather-runtime/Cargo.toml
+++ b/feather-runtime/Cargo.toml
@@ -7,7 +7,6 @@ description = "Web Server Runtime for Feather"
 license = "MIT"
 
 [dependencies]
-rusty_pool = {version = "0.7.0", default-features = false}
 httparse = "1.10.1"
 http = "1.3.1"
 crossbeam = "0.8.4"
@@ -16,6 +15,12 @@ serde = { version = "1.0"}
 serde_json = { version = "1.0"}
 ctrlc = "*"
 thiserror= "*"
+chrono = "0.4.40"
+log = "*"
+
+[dev-dependencies]
+env_logger = "0.11.8"
+
 [lib]
 crate-type = ["lib"]
 name = "feather_runtime"
