--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ colored = "3.0.0"
 dyn-clone = "1.0.19"
 serde = { version = "1.0.217", features = ["derive"] , optional = true}
 serde_json = {version = "1.0.135", optional = true}
+chrono = { version = "0.4.26"}
+jsonwebtoken = { version = "9.1.0", optional = true}
 feather-runtime ={ path = "./feather-runtime",version = "0.1.0" }
 
 
@@ -29,6 +31,9 @@ path = "src/lib.rs"
 [features]
 default = ["json"]
 json = ["dep:serde","dep:serde_json"]
+jwt = ["dep:jsonwebtoken"]
+
+
 
 [[example]]
 name = "app"
@@ -37,3 +42,9 @@ path = "examples/app.rs"
 [[example]]
 name = "middleware"
 path = "examples/middleware.rs"
+
+
+[[example]]
+name = "jwt"
+path = "examples/jwt.rs"
+required-features = ["jwt"]
