--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1.0.217", features = ["derive"] , optional = true}
 serde_json = {version = "1.0.135", optional = true}
 chrono = { version = "0.4.26"}
 jsonwebtoken = { version = "9.1.0", optional = true}
-feather-runtime ={ path = "./feather-runtime"}
+feather-runtime ={ path = "./feather-runtime", version = "0.1.2"}
 anymap = "0.12.0"
 
 [dev-dependencies]
