--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,42 +1,21 @@
-[package]
-name = "feather"
-version = "0.3.2"
-edition = "2024"
-repository = "https://github.com/BersisSe/feather"
-description = "Feather: A minimal HTTP framework for Rust"
-authors = ["Bersis Sevimli"]
-license = "MIT"
-readme = "README.md"
-keywords = ["http","web","framework","minimal","rust"]
-categories = ["web-programming","network-programming"]
+[workspace]
+resolver = "3" # 2024
+members = ["crates/*", "examples/*"]
+exclude = ["benches/axum", "benches/feather"]
 
-[dependencies]
-colored = "3.0.0"
-serde = { version = "1.0.217", features = ["derive"] , optional = true}
-serde_json = {version = "1.0.135", optional = true}
-chrono = { version = "0.4.26"}
-jsonwebtoken = { version = "9.1.0", optional = true}
-feather-runtime ={ path = "./feather-runtime", version = "0.2.0"}
-anymap = "0.12.0"
-
-[dev-dependencies]
-reqwest = {version = "0.12.15", features = ["blocking"]}
-rusqlite = "0.35.0"
-
-[lib]
-name = "feather"
-crate-type = ["lib"]
-path = "src/lib.rs"
-
-[features]
-default = ["json","jwt"]
-json = ["dep:serde","dep:serde_json"]
-jwt = ["dep:jsonwebtoken"]
-
-
-
-[[example]]
-name = "jwt"
-path = "examples/jwt.rs"
-required-features = ["jwt"]
-
+[workspace.dependencies]
+feather = { version = "~0.3", default-features = false }
+feather-runtime = { version = "~0.2", default-features = false }
+http = { version = "1", default-features = false }
+httparse = { version = "1", default-features = false }
+serde = { version = "1", default-features = false }
+serde_json = { version = "1", default-features = false }
+chrono = { version = "~0.4", default-features = false }
+bytes = { version = "1", default-features = false }
+log = { version = "~0.4", default-features = false }
+serde_urlencoded = { version = "~0.7", default-features = false }
+thiserror = { version = "2", default-features = false }
+crossbeam = { version = "~0.8", default-features = false }
+anymap = { version = "~0.12", default-features = false }
+jsonwebtoken = { version = "9", default-features = false }
+rusqlite = { version = "~0.35", default-features = false }
