--- a/crates/feather/Cargo.toml
+++ b/crates/feather/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "feather"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2024"
 repository = "https://github.com/BersisSe/feather"
+documentation = "https://docs.rs/feather"
 description = "Feather: A minimal HTTP framework for Rust"
 authors = ["Bersis Sevimli"]
 license = "MIT"
@@ -22,3 +23,4 @@ serde_json = { workspace = true, optional = true }
 default = ["json", "jwt"]
 json = ["dep:serde", "dep:serde_json"]
 jwt = ["dep:jsonwebtoken"]
+websocket = []
