--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["crates/*", "examples/*"]
 exclude = ["benches/axum", "benches/feather"]
 
 [workspace.dependencies]
-feather = { version = "~0.4",path = "./crates/feather", default-features = false }
+feather = { version = "~0.4",path = "./crates/feather"}
 feather-runtime = { version = "~0.2", path = "./crates/feather-runtime", default-features = false }
 http = { version = "1", default-features = false, features = ["std"]}
 httparse = { version = "1", default-features = false }
@@ -19,3 +19,6 @@ crossbeam = { version = "~0.8", default-features = false ,features = ["std"]}
 anymap = { version = "~0.12", default-features = false }
 jsonwebtoken = { version = "9", default-features = false }
 rusqlite = { version = "~0.35", default-features = false }
+tungstenite = {version="0.26.2"}
+parking_lot = "0.12.3"
+uuid ={ version = "1.16", features = ["v4"]}
