--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ exclude = ["benches/axum", "benches/feather"]
 
 [workspace.dependencies]
 feather = { version = "~0.4",path = "./crates/feather", default-features = false }
-feather-runtime = { version = "~0.2", path = "./crates/feather-runtime", default-features = false }
+feather-runtime = { version = "~0.3", path = "./crates/feather-runtime", default-features = false }
 http = { version = "1", default-features = false, features = ["std"]}
 httparse = { version = "1", default-features = false }
 serde = { version = "1", default-features = false }
@@ -20,3 +20,4 @@ anymap = { version = "~0.12", default-features = false }
 jsonwebtoken = { version = "9", default-features = false }
 rusqlite = { version = "~0.35", default-features = false }
 urlencoding = "2.1.3"
+parking_lot = { version = "~0.12"}
