--- a/crates/feather-runtime/Cargo.toml
+++ b/crates/feather-runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feather-runtime"
-version = "0.2.2"
+version = "0.3.0"
 edition = "2024"
 authors = ["Bersis Sevimli"]
 description = "Web Server Runtime for Feather"
@@ -18,6 +18,7 @@ serde_json = { workspace = true }
 serde_urlencoded = { workspace = true }
 thiserror = { workspace = true }
 urlencoding = {workspace = true}
+parking_lot ={ workspace = true}
 [dev-dependencies]
 simple_logger = "5.0.0"
 
