--- a/examples/dynamic_route/Cargo.toml
+++ b/examples/dynamic_route/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "api"
+name = "dynamic_route"
 version = "0.0.0"
 edition = "2024"
 publish = false
 
 [dependencies]
-feather = { workspace = true, features = ["json","log"] }
+feather = { workspace = true }
