--- a/examples/context/Cargo.toml
+++ b/examples/context/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2024"
 publish = false
 
 [dependencies]
-feather = { workspace = true, features = ["json"] }
+feather = { workspace = true, features = ["json","log"] }
 rusqlite = { workspace = true }
 serde_json = { workspace = true }
