--- a/crates/feather-runtime/Cargo.toml
+++ b/crates/feather-runtime/Cargo.toml
@@ -12,12 +12,20 @@ chrono = { workspace = true }
 crossbeam = { workspace = true }
 http = { workspace = true }
 httparse = { workspace = true }
-log = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-serde_urlencoded = { workspace = true }
+log = { workspace = true , optional = true}
+serde = { workspace = true, optional = true}
+serde_json = { workspace = true, optional = true}
+serde_urlencoded = { workspace = true}
 thiserror = { workspace = true }
 urlencoding = {workspace = true}
 parking_lot ={ workspace = true}
+
 [dev-dependencies]
 simple_logger = "5.0.0"
+
+[features]
+default = ["full"]
+full = ["serde", "json","log"]
+log = ["dep:log",]
+serde = ["dep:serde"]
+json = ["serde","dep:serde_json"]
