--- a/crates/feather/Cargo.toml
+++ b/crates/feather/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming", "network-programming"]
 [dependencies]
 anymap = { workspace = true }
 chrono = { workspace = true }
-feather-runtime = { workspace = true }
+feather-runtime = { workspace = true, features = ["serde"]}
 jsonwebtoken = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"], optional = true }
 serde_json = { workspace = true, optional = true }
@@ -22,6 +22,6 @@ simple_logger = { version = "5.0.0", optional = true }
 
 [features]
 default = ["json","log"]
-log = ["dep:log", "dep:simple_logger"]
-json = ["dep:serde", "dep:serde_json"]
+log = ["dep:log", "dep:simple_logger", "feather-runtime/log"]
+json = ["dep:serde", "dep:serde_json", "feather-runtime/json"]
 jwt = ["dep:jsonwebtoken"]
