--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,10 @@ resolver = "3" # 2024
 members = ["crates/*", "examples/*"]
 exclude = ["benches/axum", "benches/feather"]
 
-
-
 [workspace.dependencies]
-feather = { version = "~0.4",path = "./crates/feather", default-features = false }
-feather-runtime = { version = "~0.3", path = "./crates/feather-runtime", default-features = false }
+feather = { version = "~0.5",path = "./crates/feather", default-features = false }
+feather-runtime = { version = "~0.4", path = "./crates/feather-runtime", default-features = false }
+feather-macros = {version = "0.1", path = "./crates/feather-macros"}
 http = { version = "1", default-features = false, features = ["std"]}
 httparse = { version = "1", default-features = false }
 serde = { version = "1", default-features = false }
@@ -23,3 +22,4 @@ jsonwebtoken = { version = "9", default-features = false }
 rusqlite = { version = "~0.35", default-features = false }
 urlencoding = "2.1.3"
 parking_lot = { version = "~0.12"}
+may ={ version = "0.3.51" }
