--- a/crates/feather/Cargo.toml
+++ b/crates/feather/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feather"
-version = "0.4.7"
+version = "0.5.0"
 edition = "2024"
 repository = "https://github.com/BersisSe/feather"
 description = "Feather: A minimal HTTP framework for Rust"
@@ -18,10 +18,10 @@ jsonwebtoken = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"], optional = true }
 serde_json = { workspace = true, optional = true }
 log ={ workspace = true, optional = true }
-simple_logger = { version = "5.0.0", optional = true }
-
+feather-macros = {workspace = true}
+simple_logger = { version = "5.0", optional = true }
 [features]
-default = ["json","log"]
-log = ["dep:log", "dep:simple_logger", "feather-runtime/log"]
+default = ["json","log","jwt"]
+log = ["dep:log","dep:simple_logger", "feather-runtime/log"]
 json = ["dep:serde", "dep:serde_json", "feather-runtime/json"]
-jwt = ["dep:jsonwebtoken"]
+jwt = ["dep:jsonwebtoken","json", "feather-macros/jwt"]
