--- a/crates/feather-macros/Cargo.toml
+++ b/crates/feather-macros/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 
 [dependencies]
 quote = "1.0"
-syn = "2.0"
+syn = {version = "2.0", features = ["full"]}
 
 [lib]
 proc-macro = true
