--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ rusqlite = { version = "~0.35", default-features = false }
 urlencoding = "2.1.3"
 parking_lot = { version = "~0.12"}
 may ={ version = "0.3.51" }
+itoa = {version = "1"}
