--- a/crates/feather-runtime/Cargo.toml
+++ b/crates/feather-runtime/Cargo.toml
@@ -20,8 +20,8 @@ thiserror = { workspace = true }
 urlencoding = {workspace = true}
 parking_lot ={ workspace = true}
 may = { workspace = true }
-socket2 = "0.5.10"
-
+itoa = { workspace = true}
+num_cpus ={ version = "1.17"}
 [dev-dependencies]
 simple_logger = "5.0.0"
 
