--- a/crates/feather-runtime/Cargo.toml
+++ b/crates/feather-runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feather-runtime"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2024"
 authors = ["Bersis Sevimli"]
 description = "Web Server Runtime for Feather"
@@ -22,8 +22,10 @@ parking_lot ={ workspace = true}
 may = { workspace = true }
 itoa = { workspace = true}
 num_cpus ={ version = "1.17"}
+
 [dev-dependencies]
 simple_logger = "5.0.0"
+serde = {version = "*", features = ["derive"]}
 
 [features]
 default = ["full"]
